pxc/tests/test_11_foreach/fe_arr2.px

import io;

int z;
foreach (int i, string& s : z) { // error
}

